# numgrad

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: pull_request.yaml  python-package.yaml  run-examples.yaml
docs/: conf.py  index.rst
docs/api/: modules.rst  numflow.rst  numgrad.rst  pyboilerplate.rst  pygrad.distributions.rst  pygrad.nn.rst  pygrad.optimizers.rst  pygrad.random.rst  pygrad.rst  pygrad.stats.rst
examples/: ard.py  bnn.py  cnn.py  mlp.py  resnet.py  uvae.py  vae.py
numflow/: __init__.py  _config.py  _decorators.py  _differentiable.py  _graph.py  _variable.py  conftest.py
numflow/_numpy/: __init__.py  _arithmetic.py  _exp_log.py  _extrema_finding.py  _getitem.py  _hyperbolic.py  _miscellaneous.py  _reshape.py  _statistics.py  _transpose.py  _trigonometric.py
numflow/_scipy/: __init__.py
numflow/_utils/: _numerical_grad.py
numgrad/: __init__.py  _config.py  _decorators.py  _differentiable.py  _graph.py  _variable.py  _vjp.py  conftest.py
numgrad/_numpy/: __init__.py  _arithmetic.py  _array_creation.py  _array_manipulation.py  (+14 more)
pygrad/: __init__.py  _array.py  _config.py  _decorators.py  _graph.py  _node.py  _operator.py  _tensor.py  _type_check.py  _types.py  _variable.py  conftest.py
tests/: test_array.py  test_binary_function.py  test_config.py  test_decorators.py  test_differentiable_function.py  test_differentiation.py  test_errors.py  test_graph.py  test_operator.py  test_pyboilerplate.py  test_pygrad.py  test_tensor.py  test_types.py  test_unary_function.py  test_variable.py  test_version.py
(+188 files in other folders)
