; See:
; https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[options.extras_require]
develop =
    matplotlib
    scikit-image
    scikit-learn
    tqdm

    pre-commit
    pytest

    # format
    autopep8
    flake8
    flake8-absolute-import
    flake8-broken-line
    flake8-builtins
    flake8-commas
    flake8-docstrings
    flake8-import-order
    flake8-multiline-containers
    flake8-mutable
    pep8-naming

    # documentation
    sphinx
    sphinx_rtd_theme
    livereload


[flake8]
per-file-ignores =
    ; Ignore 'Missing docstring in public module' and 'variable "copyright" is shadowing a python builtin'
    docs/conf.py:A001,D100
    ; Ignore missing docstring in public module, class, method, function, package, __init__
    tests/*.py:D100,D101,D102,D103,D104,D107
    ; Ignore missing docstring in public module, class, method, function, package, __init__
    examples/*.py:D100,D101,D102,D103,D104,D107
    ; Ignore shadowing a python builtin "min"
    pygrad/_math/_min.py:A001
    ; Ignore shadowing a python builtin "max"
    pygrad/_math/_max.py:A001
    ; Ignore shadowing a python builtin "sum"
    pygrad/_math/_sum.py:A001
    ; Ignore shadowing a python builtin "int"
    pygrad/_core/_config.py:A003

application-import-names = pygrad

; https://github.com/PyCQA/flake8-import-order/blob/master/tests/test_cases/complete_google.py
import-order-style = google
